<resources>
    <string name="app_name">Investo</string>
    <string name="welcome_message">The first Arabic platform for building a successful investment and professional future</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login_with">Login with</string>
    <string name="e_mail">E-mail</string>
    <string name="send">Send</string>
    <string name="required">Required</string>
    <string name="gender">Gender</string>
    <string name="wrong_email_address">Invalid E-mail</string>
    <string name="forget_password2">Forget password</string>
    <string name="forget_password_def">Enter your email, and we will send a link to reset your password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="id_national">ID national</string>
    <string name="birthday">Birthday</string>
    <string name="type">Type</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone number</string>
    <string name="login_message">Please enter your email and password</string>
    <string name="create_an_account">Create an account</string>
    <string name="or">OR</string>
    <string name="login_with_google_msg">Login with Google</string>
    <string name="login_with_facebook_msg">Login with Facebook</string>
    <string name="forgot_password_msg">Forgot Password?</string>
    <string name="don_t_have_a_account_msg">Don’t have a account?</string>



    <string-array name="spinner_type">
        <item>Type</item>
        <item>beginner</item>
        <item>expert</item>
    </string-array>

    <string-array name="spinner_gender">
        <item>Gender</item>
        <item>male</item>
        <item>female</item>
    </string-array>
</resources>