<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/border1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_border_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/border2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_border_two"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/MediumTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/create_an_account" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_f_name"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/_8sdp"
                android:drawableStart="@drawable/ic_user"
                android:hint="@string/first_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_l_name"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/_8sdp"
                android:drawableStart="@drawable/ic_user"
                android:hint="@string/last_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/_8sdp"
                android:drawableStart="@drawable/ic_mail"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/_8sdp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_phone"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/_8sdp"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_national_number"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/_8sdp"
                android:drawableStart="@drawable/ic_id"
                android:hint="@string/id_national" />


            <TextView
                android:id="@+id/edt_birthday"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center_vertical"
                android:hint="@string/birthday"
                app:drawableStartCompat="@drawable/ic_calendar" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_gender"
            style="@style/EditTextStyle"
            android:paddingStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:drawableStart="@drawable/ic_gender"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:entries="@array/spinner_gender"
            android:hint="@string/gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_gender"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_gender"
            app:layout_constraintStart_toStartOf="@+id/spinner_gender"
            app:layout_constraintTop_toTopOf="@+id/spinner_gender" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_gender"
            app:layout_constraintEnd_toEndOf="@+id/spinner_gender"
            app:layout_constraintTop_toTopOf="@+id/spinner_gender" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_type"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/_8sdp"
            android:drawableStart="@drawable/ic_user"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:entries="@array/spinner_type"
            android:hint="@string/gender"
            android:paddingStart="@dimen/_24sdp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_gender" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_user"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_type"
            app:layout_constraintStart_toStartOf="@+id/spinner_type"
            app:layout_constraintTop_toTopOf="@+id/spinner_type" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_type"
            app:layout_constraintEnd_toEndOf="@+id/spinner_type"
            app:layout_constraintTop_toTopOf="@+id/spinner_type" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            style="@style/PrimaryButtonStyle"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_type" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>